Inclusão de tag link na estrutura

--- a/pages/anamnese.html
+++ b/pages/anamnese.html
@@ -9,12 +9,12 @@
 </head>
 <header>
     <nav class="nav_bar">
-        <ul>
+        <ul class="header">
             <li class="header logo">La Belle</li>
-            <li class="header link1">Página Inicial</li>
-            <li class="header link2">Sobre nós</li>
-            <li class="header link3">Para você</li>
-            <li class="header link4">Contato</li>
+            <li class="header link1"> <a href="">Página inicial</a></li>
+            <li class="header link2"> <a href="">Sobre nós</a></li>
+            <li class="header link3"> <a href="">Para você</a></li>
+            <li class="header link4"> <a href="">Contato</a></li>
         </ul>
     </nav>
 </header>
