Arrumado font family do h1, arrumado as divs dos icones, adicionado nova div no header

--- a/pages/LoginEsteticista.html
+++ b/pages/LoginEsteticista.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login Esteticista</title>
 	<link rel="stylesheet" href="./../css/main.css">
 	<link rel="stylesheet" href="./../css/reset.css">
-	<link rel="stylesheet"	href="./../css/Esteticistastyle.css">
+	<link rel="stylesheet" href="./../css/Esteticistastyle.css">
 
 </head>
-<body>	
-		<div class="Corpo">	
+
+<body>
+	<div class="Corpo">
 		<header class="Header" id="Header">
-		<h1>La belle</h1>
-		<p>Bem Vinda "" <p id="NomeEsteticista"></p> </p>	
-		
-		<ul>
-		<li><a href="#">1</a> </li>	
-		<li> <a href="#">2</a></li>	
-		<li><a href="#">3</a></li>	
-		<li><a href="#">4</a></li>	
-		<li><a href="#">5</a></li>	
-		</ul>
+			<h1>La belle</h1>
+
+			<div id="MenuEsteticista">
+				<p>Bem Vinda ""
+				<p id="NomeEsteticista"></p>
+
+
+				<ul>
+					<li><a href="#">1</a> </li>
+					<li> <a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+					<li><a href="#">5</a></li>
+				</ul>
+			</div>
 		</header>
 
 		<main>
-			<div id="caixas">
 
-			<div><a href="#" title="Clientes" target="_parent" > <img src="./../Icones/Clientes.png" alt="Clientes">Clientes</a></div>
-			<div><a href="#" title="Agenda" target="_parent"> <img src="./../Icones/Afenda.png" alt="Agenda"> Agenda</a></div>
-			<div> <a href="#" title="Fichas de Avaliação" target="_parent"> <img src="./../Icones/Ficha.png" alt="Fichas"> Fichas de Avaliação</a></div>
-			<div><a href="#" title="Evoluções" target="_parent"> <img src="./../Icones/Evolucoes.png" alt=""> Evoluções</a></div>
-			</div>	
+			<div class="Div1">
+				<div class="icones"><a href="#" title="Clientes" target="_parent"> <img src="./../Icones/Clientes.png"
+							alt="Clientes">Clientes</a></div>
+				<div class="icones"><a href="#" title="Agenda" target="_parent"> <img src="./../Icones/Afenda.png"
+							alt="Agenda">
+						Agenda</a></div>
+			</div>
+
+			<div class="Div1">
+				<div class="icones"> <a href="#" title="Fichas de Avaliação" target="_parent"> <img
+							src="./../Icones/Ficha.png" alt="Fichas"> Fichas de Avaliação</a></div>
+				<div class="icones"><a href="#" title="Evoluções" target="_parent"> <img src="./../Icones/Evolucoes.png"
+							alt="">
+						Evoluções</a></div>
+			</div>
+
 		</main>
-		
-		
+
+
 	</div>
 
 
 </body>
+
 </html>
