--- a/pages/LoginEsteticista.html
+++ b/pages/LoginEsteticista.html
@@ -12,23 +12,26 @@
 </head>
 
 <body>
-	<div class="Corpo">
+	
 		<header class="Header" id="Header">
-			<h1>La belle</h1>
 
 			<div id="MenuEsteticista">
-				<p>Bem Vinda ""
-				<p id="NomeEsteticista"></p>
 
 
-				<ul>
+				<a href="#" id="grid-img"> <img src="../Icones/Fa-Light.png" alt=""></a>
+				<ul id="Lista">
+					
 					<li><a href="#">1</a> </li>
 					<li> <a href="#">2</a></li>
 					<li><a href="#">3</a></li>
 					<li><a href="#">4</a></li>
 					<li><a href="#">5</a></li>
 				</ul>
+				<p>Bem Vinda ""
+				<p id="NomeEsteticista"></p>
 			</div>
+			<h1>La belle</h1>
+
 		</header>
 
 		<main>
@@ -52,7 +55,7 @@
 		</main>
 
 
-	</div>
+	
 
 
 </body>
