--- a/pages/tipo-avaliacao.html
+++ b/pages/tipo-avaliacao.html
@@ -26,30 +26,26 @@
             </div>
         </header>
     </section>
-<main>
-    <h1 class="titulo">Escolha a referência de procêdimento estético:</h1>
+    <main>
+        <h1 class="titulo">Escolha a referência de procêdimento estético:</h1>
 
+        <div class="container-img">
+            <div class="inner">
+                <img src="../imagens/FotoCorpo.jpg" alt="Imagem corpo" class="image"/>
+            </div>
 
-    <div class="container-img">
-        <div class="inner">
-          <img src="../imagens/FotoCorpo.jpg" alt="Imagem corpo" class="image"/>
+            <div class="inner">
+                <img src="../imagens/FotoRosto.jpg" alt="Imagem rosto" class="image"/>
+            </div>
         </div>
 
-        <div class="inner">
-            <img src="../imagens/FotoRosto.jpg" alt="Imagem corpo"class="image"/>
-          </div>
-      </div>
-
-
-    <div class="botoes-area">
-        <button class="botao-corporal">Corporal</button>
-        <button class="botao-facial">Facial</button>
-    </div>
-
-    <div class="area-bota-voltar">
-        <button class="botao-voltar">Voltar</button>
-    </div>
-</main>
-    
+        <div class="botoes-area">
+            <div class="botoes-container">
+                <button class="botao-corporal">Corporal</button>
+                <button class="botao-facial">Facial</button>
+            </div>
+            <button class="botao-voltar">Voltar</button>
+        </div>
+    </main>
 </body>
 </html>
