Alterações no css com responsividade

--- a/pages/historico-medidas.html
+++ b/pages/historico-medidas.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/historico-medidas.css">
     <link rel="stylesheet" href="../css/main.css">
+    <title>Medidas Corporais</title>
 
 </head>
 
@@ -15,96 +16,73 @@
 
     <main>
         <header>
-            <h2>Medidas</h2>
+            <h2>Formulário de Medidas</h2>
         </header>
 
-        <section class="form-section">
-            <form class="form-container">
-                <fieldset class="form-group">
-                    <label for="peso">Peso</label>
-                    <input type="number" id="peso" name="peso">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="altura">Altura</label>
-                    <input type="number" id="altura" name="altura">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="cintura">Cintura</label>
-                    <input type="number" id="cintura" name="cintura">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="coxa">Coxa</label>
-                    <input type="number" id="coxa" name="coxa">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="quadril">Quadril</label>
-                    <input type="number" id="quadril" name="quadril">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="IMC">IMC</label>
-                    <input type="number" id="IMC" name="IMC">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="busto">Busto</label>
-                    <input type="number" id="busto" name="busto">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="braco-direito">Braço Direito</label>
-                    <input type="number" id="braco-direito" name="braco-direito">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="braco-esquerdo">Braço Esquerdo</label>
-                    <input type="number" id="braco-esquerdo" name="braco-esquerdo">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="estomago">Estômago</label>
-                    <input type="number" id="estomago" name="estomago">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="abdomen">Abdômen</label>
-                    <input type="number" id="abdomen" name="abdomen">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="coxa-direita">Coxa Direita</label>
-                    <input type="number" id="coxa-direita" name="coxa-direita">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="coxa-esquerda">Coxa Esquerda</label>
-                    <input type="number" id="coxa-esquerda" name="coxa-esquerda">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="culote">Culote</label>
-                    <input type="number" id="culote" name="culote">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="panturrilha-direita">Panturrilha Direita</label>
-                    <input type="number" id="panturrilha-direita" name="panturrilha-direita">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="panturrilha-esquerda">Panturrilha Esquerda</label>
-                    <input type="number" id="panturrilha-esquerda" name="panturrilha-esquerda">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="tornozelo-direito">Tornozelo Direito</label>
-                    <input type="number" id="tornozelo-direito" name="tornozelo-direito">
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="tornozelo-esquerdo">Tornozelo Esquerdo</label>
-                    <input type="number" id="tornozelo-esquerdo" name="tornozelo-esquerdo">
-                </fieldset>
-        </section>
+        <article>
+            <section class="form-section">
+                <form class="form-container">
+                    <fieldset class="form-group">
+                        <div class="grid-container">
+                            <div class="grid-item">
+                                <label for="peso">Peso</label>
+                                <input type="number" id="peso" name="peso">
+                                <label for="altura">Altura</label>
+                                <input type="number" id="altura" name="altura">
+                                <label for="cintura">Cintura</label>
+                                <input type="number" id="cintura" name="cintura">
+                                <label for="coxa">Coxa</label>
+                                <input type="number" id="coxa" name="coxa">
+                                <label for="tornozelo-direito">Tornozelo Direito</label>
+                                <input type="number" id="tornozelo-direito" name="tornozelo-direito">
+                            </div>
+                            <div class="grid-item">
+                                <label for="quadril">Quadril</label>
+                                <input type="number" id="quadril" name="quadril">
+                                <label for="IMC">IMC</label>
+                                <input type="number" id="IMC" name="IMC">
+                                <label for="busto">Busto</label>
+                                <input type="number" id="busto" name="busto">
+                                <label for="braco-direito">Braço Direito</label>
+                                <input type="number" id="braco-direito" name="braco-direito">
+                                <label for="tornozelo-esquerdo">Tornozelo Esquerdo</label>
+                                <input type="number" id="tornozelo-esquerdo" name="tornozelo-esquerdo">
+                            </div>
+                            <div class="grid-item">
+                                <label for="braco-esquerdo">Braço Esquerdo</label>
+                                <input type="number" id="braco-esquerdo" name="braco-esquerdo">
+                                <label for="estomago">Estômago</label>
+                                <input type="number" id="estomago" name="estomago">
+                                <label for="abdomen">Abdômen</label>
+                                <input type="number" id="abdomen" name="abdomen">
+                                <label for="coxa-direita">Coxa Direita</label>
+                                <input type="number" id="coxa-direita" name="coxa-direita">
+                            </div>
+                            <div class="grid-item">
+                                <label for="coxa-esquerda">Coxa Esquerda</label>
+                                <input type="number" id="coxa-esquerda" name="coxa-esquerda">
+                                <label for="culote">Culote</label>
+                                <input type="number" id="culote" name="culote">
+                                <label for="panturrilha-direita">Panturrilha Direita</label>
+                                <input type="number" id="panturrilha-direita" name="panturrilha-direita">
+                                <label for="panturrilha-esquerda">Panturrilha Esquerda</label>
+                                <input type="number" id="panturrilha-esquerda" name="panturrilha-esquerda">
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </section>
 
-        <section class="form-observacoes">
-            <label for="observacoes">Observações</label>
-            <input type="number" id="observacoes" name="observacoes">
-        </section>
+            <section class="form-observacoes">
+                <label for="observacoes">Observações</label>
+                <textarea id="observacoes" name="observacoes"></textarea>
+            </section>
 
-        <section class="form-buttons">
-            <button class="button" type="button">Voltar</button>
-            <button class="button" type="button">Avançar</button>
-        </section>
-
-        </form>
+            <section class="form-buttons">
+                <button class="button-backward" type="button">Voltar</button>
+                <button class="button-forward" type="submit">Avançar</button>
+            </section>
+        </article>
     </main>
 </body>
 
