--- a/pages/historico-medidas.html
+++ b/pages/historico-medidas.html
@@ -73,9 +73,9 @@
                 </form>
             </section>
 
-            <section class="form-observacoes">
-                <label for="observacoes">Observações</label>
-                <textarea id="observacoes" name="observacoes"></textarea>
+            <section class="form-observations">
+                <label for="observations">Observações</label>
+                <textarea id="observations" name="observations"></textarea>
             </section>
 
             <section class="form-buttons">
