Eliminada algumas regras inuteis no CSS

--- a/pages/LoginEsteticista.html
+++ b/pages/LoginEsteticista.html
@@ -45,7 +45,7 @@
 			</div>
 
 			<div class="Div1">
-				<div class="icones"> <a href="#" title="Fichas de Avaliação" target="_parent"> <img
+				<div class="icones"> <a href="#" title="Fichas_de_Avaliação" target="_parent" id="Ficha"> <img
 							src="./../Icones/Ficha.png" alt="Fichas"> Fichas de Avaliação</a></div>
 				<div class="icones"><a href="#" title="Evoluções" target="_parent"> <img src="./../Icones/Evolucoes.png"
 							alt="">
