--- a/front_model/paginas/anamnese.html
+++ b/front_model/paginas/anamnese.html
@@ -34,15 +34,15 @@
             <input class="inputs" type="text" placeholder="Já fez tratamento estético?">
             <input class="inputs" type="text" placeholder="Antecedentes alérgicos">
             <input class="inputs" type="text" placeholder="Alterações hormonais">
-            <input class="inputs" type="text" placeholder="Reposição Hormonal">
-            <input class="inputs" type="text" placeholder="Hipertiroidismo ou Hipotiroidismo">
-            <input class="inputs" type="text" placeholder="Intestino regular">
             <input class="inputs" type="text" placeholder="Alimentação balanceada">
-            <input class="inputs" type="text" placeholder="Ingestão de líquidos">
             <input class="inputs" type="text" placeholder="Bebida alcoólica (frequência)">
             <input class="inputs" type="text" placeholder="Fumante">
-            <input class="inputs" type="text" placeholder="Ciclo menstrual - DUM">
             <input class="inputs" type="text" placeholder="Medicamento contínuo">
+            <input class="inputs" type="text" placeholder="Gestante">
+            <input class="inputs" type="text" placeholder="Problema cardíaco">
+            <input class="inputs" type="text" placeholder="Doença significativa">
+            <input class="inputs" id="obs" type="text" placeholder="Observações">          
+
             <div class="grid_area_btns">
                 <input class="btns btn_back" type="button" value="Voltar">
                 <input class="btns btn_next" type="button" value="Próximo">
