Laindig page feita tudo :)

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
         <header>
             <div class="conteiner">
                 <div>
-                    <nav id="sobrenos" class="top_minusculo">Sobre Nós</nav>
+                    <!-- <nav id="sobrenos" class="top_minusculo"></nav> -->
+                    <a href="#sobre" class="top_minusculo" id="sobrenos">sobrenos</a>
                 </div>
                 <div>
-                    <nav id="paravoce" class="top_minusculo">Para Voce</nav>
+                    <!-- <nav id="paravoce" class="top_minusculo">Para Voce</nav> -->
+                    <a href="#para" id="paravoce" class="top_minusculo">Para Voce</a>
                 </div>
                 <div id="conta">
-                    <nav id="Contato" class="top_minusculo">Contato</nav>
+                    <!-- <nav id="Contato" class="top_minusculo">Contato</nav> -->
+                    <a href="#contatos" class="top_minusculo" id="Contato">Contatos</a>
                 </div>
                 <div>
                     <nav id="cadastro">Cadastre-se</nav>
@@ -48,7 +51,7 @@
                         alt="imagen de um corpo e de um rosto de mulher">
                 </div>
                 <div id="sobre" class="logo">
-                    <h1 class="config subtitulos">Sobre nós</h1>
+                    <h1 class="config subtitulos" id="sobre">Sobre nós</h1>
                     <h2 class="config textos">
                         Lorem ipsum, dolor sit aAd, tempore tenetur?<br>Amet,
                         tempore blandi titaque doloremque<br>voluptates natus
@@ -64,7 +67,7 @@
 
             <div class="conteiner_servicos">
                 <div class="brf" id="servicos">
-                    <h1 class="tiltle titulos">Nossos Serviços</h1>
+                    <h1 class="tiltle titulos" id="para">Nossos Serviços</h1>
                 </div>
 
                 <div id="facial" class="logo">
@@ -99,7 +102,7 @@
                 </div>
 
             </div>
-            <h1 class="titulo titi">La Belle</h1>
+            <h1 class="titulo titi" id="contatos">La Belle</h1>
             <footer>
                 <div class="containerfooter">
 
